o label.ellipse() now uses a much more flexible `label.pos` argument for positioning the
  text labels used in heplot() and friends.
o in coefplot.mlm(), now pass `label.pos` to label.ellipse()
o added Mahalanobis() for classical and robust squared distances; handles missing data gracefully.
o added SocialCog data [Thx: Leah Hartman]

Version 1.1-0 (2016-03-03)

o Added boXM from biotools
o Fleshed out boxM() with formula, lm, plot and summary methods
o added plot.boxM() method
o Added covEllipses() methods for plotting (possibly robust) covariance ellipses
o Added colDevs() as a utility and for use in other multivariate tests.
o Added data(AddHealth), a simple example of a one-way MANOVA with nice views [thx: Russell Warne]
o summary.boxM() now returns the calculated statistics and can be used to construct other kinds of plots.
o plot.boxM() gets a gplabel argument to provide a label for the group factor
o pairs.mlm() gets a var.cex argument to control size of variable labels
o Added logdetCI() for confidence intervals on log determinants of covariance matrices (experimental)
o Now use logdetCI() in plot.boxM()


Version 1.0-16 (2015-07-11)
o use importsFrom for base packages

Version 1.0-15 (2015-04-15)
o Fix require -> requireNamespace

Version 1.0-14 (2015-02-15)
o Updated broken urls in documentation
o Removed vcov.mlm from exports to conform to CRAN policies
o Now use rgl:: for rgl functions in *3d.R
o Removed robmlm.default, robmlm.formula from exports
o Imports: rgl


Version 1.0-12 (2014-05-15)
o Removed Authors: to satisfy CRAN nits
o Fixed doc for Hernior.Rd
o Now importsFrom(MASS) rather than Depends:


Version 1.0-11 (2013-08-20)
o Cosmetic changes to pass CRAN checks
o For R 3.1.0, revised vcov.mlm() to avoid calling summary.mlm() directly
o fixed long lines in .Rd files for R 3.0.1 checks
o removed require() calls for MASS & car (Depends:)
o removed ::: calls to car and stats

Version 1.0-10 (2013-06-03)