@@ -38,7 +38,8 @@ export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0, cross3d,
       colDevs,
       logdetCI,
     	bartlettTests, leveneTests,
-    	Mahalanobis
+    	Mahalanobis,
+    	cqplot
   	)
 
 S3method(heplot, mlm)
@@ -66,3 +67,8 @@ S3method(covEllipses, default)
 S3method(covEllipses, data.frame)
 S3method(covEllipses, matrix)
 S3method(covEllipses, boxM)
+
+S3method(cqplot, default)
+S3method(cqplot, mlm)
+
+
