@@ -11,6 +11,7 @@ o label.ellipse() now uses a much more flexible `label.pos` argument for positio
 o in coefplot.mlm(), now pass `label.pos` to label.ellipse()
 o added Mahalanobis() for classical and robust squared distances; handles missing data gracefully.
 o added SocialCog data [Thx: Leah Hartman]
+o added cqplot() as a plot method for an mlm
 
 Version 1.1-0 (2016-03-03)
 
